--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "http-proxy-middleware": "^0.19.0",
     "massive": "^5.5.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
